[package]
name = "GTC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.9" 
serde = { version = "1.0.9", features = ["derive"] }
regex = "1.7.1"
reqwest = { version = "0.11", features = ["json"] } 
tokio = { version = "1.12.0", features = ["full"] } 
